log/build_2024-12-25_19-50-21/quadruped_model/stderr.log
  File "/home/julio/Desktop/proyecto_tesis/quadruped_8DOF/install/quadruped_model/lib/python3.10/site-packages/quadruped_model/continuous_lifter.py", line 32
    if 
       ^
SyntaxError: invalid syntax

